2003-03-20  Bradley Bell  <btb@icculus.org>

	* main/piggy.c: comments

2003-03-20  Martin Schaffner <maschaffner@gmx.ch>

	* main/gameseq.c: delete duplicate function

	* 2d/rle.c: fix color swapping on big endian of big rle bitmaps

2003-03-19  Bradley Bell  <btb@icculus.org>

	* arch/sdl/rbaudio.c, include/rbaudio.h: starting d2 cd detection
	(cddb discid) support

	* arch/sdl/digi.c, main/kludge.c: implemented
	digi_link_sound_to_object3 for looping sounds, other looping stuff

	* arch/sdl/gr.c: removing dependencies on stuff in main/

	* arch/linux/Makefile.am, arch/linux/init.c,
	arch/linux/linuxnet.c, arch/linux/include/ukali.h,
	arch/ogl/Makefile.am, main/inferno.c: moved joy_init back to main,
	other header cleanups

	* arch/win32/ipx_win.c, configure.ac: ipx on win32 fixed!

2003-03-19  Martin Schaffner <maschaffner@gmx.ch>

	* 2d/rle.c, include/gr.h, include/rle.h, main/bm.c, main/bm.h,
	main/gamemine.c, main/gamemine.h, main/gameseq.c, main/piggy.c,
	main/piggy.h, main/wall.c, main/wall.h: if descent.pig available,
	load d1 textures for d1 levels

2003-03-19  Bradley Bell  <btb@icculus.org>

	* 2d/font.c, 2d/palette.c, 3d/interp.c, 3d/setup.c,
	arch/sdl/rbaudio.c, include/texmap.h, libmve/decoder16.c,
	libmve/decoder8.c, libmve/decoders.h, libmve/mveplay.c,
	texmap/ntmap.c, texmap/texmapl.h: header/extern declaration
	housekeeping

	* README: added some OS X info

2003-03-17  Bradley Bell  <btb@icculus.org>

	* main/newdemo.c: simplify DEMO_FILENAME macro

	* main/console.c, main/game.c: enable experimental console support

	* main/gamerend.c: fixed location of fps meter in multi

2003-03-16  Bradley Bell  <btb@icculus.org>

	* main/menu.c, main/newdemo.c, main/newdemo.h, main/newmenu.c:
	also look in shared data dir for demos

	* main/newdemo.c, main/newdemo.h: comments/formatting

2003-03-15  Christopher Thielen  <chris@luethy.net>

	* main/kludge.c: set CDROM_dir back to "." - tricks game into
	thinking d2 cd is always present
